Fix for bug#17899  Partitions: crash, NDB, Select .. ORDER BY